--- a/aula4.html
+++ b/aula4.html
@@ -907,12 +907,15 @@
                                     <h2>Certificado de conclusão</h2>
 
                                 </header>
-                                <p>Para obter o certificado de conclusão, você precisa estar matriculado no curso pelo
-                                    Campus Virtual Fiocruz e ter um aproveitamento de 70% na avaliação final.
+                               <p>Para obter o certificado de conclusão, você precisa estar <a href="https://campusvirtual.fiocruz.br/gestordecursos/hotsite/metododogia2ed/formulario">
+
+                                matriculado no curso</a> através do 
+                                <a href="https://campusvirtual.fiocruz.br/gestordecursos/hotsite/metododogia2ed/formulario"> Campus Virtual Fiocruz </a>
+                                e ter um aproveitamento de 70% na avaliação final.
                                 </p>
                                 <ul class="actions">
                                     <li><a href="https://cursos.campusvirtual.fiocruz.br/mod/quiz/view.php?id=84682" class="button primary">
-                                        Avaliação</a></li>
+                                        Ir para Avaliação</a></li>
                                 </ul>
                                 <p>Para fazer a avaliação é necessário estar inscrito. Caso não tenha feito inscrição, 
                                      <a href="https://campusvirtual.fiocruz.br/gestordecursos/hotsite/metododogia2ed/formulario">clique aqui</a>. 
