--- a/index.html
+++ b/index.html
@@ -75,8 +75,8 @@
 							</header>
 							<div class="content">
 							<h3>Por que aprender metodologia científica é importante?</h3>
-								<p>O método científico se constitui em regras, procedimentos, liguagem e protocolos que fundamentam todo conhecimento científico.
-								Apicá-lo é fazer CIÊNCIA!</p>
+								<p>O método científico se constitui em regras, procedimentos, linguagem e protocolos que fundamentam todo conhecimento científico.
+								Aplicá-lo é fazer CIÊNCIA!</p>
 								<ul class="actions">
 									<li><a href="#one" class="button next scrolly">Começar</a></li>
 								</ul>
@@ -152,8 +152,8 @@
 										<h2>Iniciar</h2>
 									</header>
 									<p>Por que aprender metodologia científica é importante?</h3>
-										<p>O método científico se constitui em regras, procedimentos, liguagem e protocolos que fundamentam todo conhecimento científico.
-										Apicá-lo é fazer CIÊNCIA!</p>
+										<p>O método científico se constitui em regras, procedimentos, linguagem e protocolos que fundamentam todo conhecimento científico.
+										Aplicá-lo é fazer CIÊNCIA!</p>
 									<ul class="actions">
 										<li><a href="intro.html" class="button next">Começar</a></li>
 									</ul>
